create navigation menu

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,12 @@
-<h1>Header</h1>
+<mat-toolbar color="primary">
+    <div class="navbar-groups">
+        <span>alireza</span>
+        <div class="navbar-items">
+            <span>Book REC</span>
+            <span>My Stories</span>
+            <span>About me</span>
+            <span>Blog</span>
+        </div>
+        <span>Sign up</span>
+    </div>
+</mat-toolbar>
