--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -1,1 +1,16 @@
-<p>hero works!</p>
+<section class="hero-section">
+    <div class="hero-container">
+        <div class="hero-text" color="primary">
+            <div class="hero-items">
+                <span class="hero-date">April, 3</span>
+                <h1 class="hero-title">How to Create a Startup? </h1>
+                <p class="hero-content">Looking at long-standing companies across various industries, we were able to identify several...</p>
+                <button mat-raised-button type="button" class="btn-primary">Read more</button>
+            </div>
+        </div>
+        <div class="hero-image">
+            <img src="../../assets/images/hero-image.png"/>
+        </div>
+    </div>
+    
+</section>
