complete feature section layouts

--- a/src/app/feature-stories/feature-stories.component.html
+++ b/src/app/feature-stories/feature-stories.component.html
@@ -1,1 +1,42 @@
-<p>feature-stories works!</p>
+<section class="feature-section">
+    <div class="feature-group">
+        <h2 class="feature-title">Featured Stories</h2>
+        <div class="feature-icons">
+            <img src="../../assets/icons/arrow-left.svg" alt="left-arrow" class="left-arrow">
+            <img src="../../assets/icons/arrow-right.svg" alt="right-arrow" class="right-arrow">
+        </div>
+    </div>
+    <div class="card-feature-container">
+        <mat-card class="feature-card">
+            <div>
+                <img mat-card-image src="../../assets/images/journaling.png" alt="">
+            </div>
+            <mat-card-content>
+                <h3>What’s All this About Journaling?</h3>
+                <p>Aug 24, 2020</p>
+            </mat-card-content>
+        </mat-card>
+    
+        <mat-card class="feature-card">
+            <div>
+                <img mat-card-image src="../../assets/images/journaling.png" alt="">
+            </div>
+            <mat-card-content>
+                <h3>What’s All this About Journaling?</h3>
+                <p>Aug 24, 2020</p>
+            </mat-card-content>
+        </mat-card>
+    
+        <mat-card class="feature-card">
+            <div>
+                <img mat-card-image src="../../assets/images/journaling.png" alt="">
+            </div>
+            <mat-card-content>
+                <h3>What’s All this About Journaling?</h3>
+                <p>Aug 24, 2020</p>
+            </mat-card-content>
+        </mat-card>
+    </div>
+    
+    
+</section>
