--- a/src/app/recent-stories/recent-stories.component.html
+++ b/src/app/recent-stories/recent-stories.component.html
@@ -1,1 +1,38 @@
-<p>recent-stories works!</p>
+<section class="recent-section">
+    <h2 class="recent-title">Recent Stories</h2>
+    <mat-card class="recent-card">
+        <div class="recent-image">
+            <img mat-card-image src="../../assets/images/time.png" alt="">
+        </div>
+        <div class="recent-content">
+            <mat-card-content>
+                <p>Jan 6, 2023</p>
+                <h3 class="recent-content-title">How My Time Management Improved?</h3>
+                <p>Looking at long-standing companies across various industries, we were able to identify several foundational elements</p>
+            </mat-card-content>
+            <mat-card-actions class="action-btn-group">
+                <button mat-button class="share-btn"></button>
+                <button mat-button class="comment-btn"></button>
+                <button mat-button class="like-btn"></button>
+            </mat-card-actions>
+        </div>
+    </mat-card>
+
+    <mat-card class="recent-card">
+        <div class="recent-image">
+            <img mat-card-image src="../../assets/images/time.png" alt="">
+        </div>
+        <div class="recent-content">
+            <mat-card-content>
+                <p>Jan 6, 2023</p>
+                <h3 class="recent-content-title">How My Time Management Improved?</h3>
+                <p>Looking at long-standing companies across various industries, we were able to identify several foundational elements</p>
+            </mat-card-content>
+            <mat-card-actions class="action-btn-group">
+                <button mat-button class="share-btn"></button>
+                <button mat-button class="comment-btn"></button>
+                <button mat-button class="like-btn"></button>
+            </mat-card-actions>
+        </div>
+    </mat-card>
+</section>
