update feature stories

--- a/src/app/feature-stories/feature-stories.component.html
+++ b/src/app/feature-stories/feature-stories.component.html
@@ -12,7 +12,7 @@
                 <img mat-card-image src="../../assets/images/journaling.png" alt="">
             </div>
             <mat-card-content>
-                <h3>What’s All this About Journaling?</h3>
+                <h3 class="feature-content-title">What’s All this About Journaling?</h3>
                 <p>Aug 24, 2020</p>
             </mat-card-content>
         </mat-card>
@@ -22,7 +22,7 @@
                 <img mat-card-image src="../../assets/images/journaling.png" alt="">
             </div>
             <mat-card-content>
-                <h3>What’s All this About Journaling?</h3>
+                <h3 class="feature-content-title">What’s All this About Journaling?</h3>
                 <p>Aug 24, 2020</p>
             </mat-card-content>
         </mat-card>
@@ -32,7 +32,7 @@
                 <img mat-card-image src="../../assets/images/journaling.png" alt="">
             </div>
             <mat-card-content>
-                <h3>What’s All this About Journaling?</h3>
+                <h3 class="feature-content-title">What’s All this About Journaling?</h3>
                 <p>Aug 24, 2020</p>
             </mat-card-content>
         </mat-card>
