--- a/src/app/feature-stories/feature-stories.component.css
+++ b/src/app/feature-stories/feature-stories.component.css
@@ -1,7 +1,6 @@
 .feature-section{
     width: 80vw;
-    height: 72vh;
-    margin: 12rem auto;
+    margin: 6rem auto;
     cursor: pointer;
 }
 
@@ -26,7 +25,9 @@
     height: 1rem;
     cursor: pointer;
 }
-
+.feature-content-title{
+    font-weight: bold;
+}
 .right-arrow{
     background-color: #998F5D;
     padding: 4px 10px;
@@ -45,4 +46,6 @@
 }
 .feature-card{
     width: 22rem;
+    background-color: #E6E6E6;
+    color: #000;
 }
