add recent stories

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-header></app-header>
 <app-hero></app-hero>
 <app-feature-stories></app-feature-stories>
+<app-recent-stories></app-recent-stories>
