--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,12 +1,15 @@
-<mat-toolbar color="primary">
-    <div class="navbar-groups">
-        <span>alireza</span>
-        <div class="navbar-items">
-            <span>Book REC</span>
-            <span>My Stories</span>
-            <span>About me</span>
-            <span>Blog</span>
+<section class="header-section">
+    <mat-toolbar color="primary">
+        <div class="navbar-groups">
+            <span>alireza</span>
+            <div class="navbar-items">
+                <span>Book REC</span>
+                <span>My Stories</span>
+                <span>About me</span>
+                <span>Blog</span>
+            </div>
+            <span>Sign up</span>
         </div>
-        <span>Sign up</span>
-    </div>
-</mat-toolbar>
+    </mat-toolbar>
+</section>
+
