--- a/src/app/feature-stories/feature-stories.component.css
+++ b/src/app/feature-stories/feature-stories.component.css
@@ -1,6 +1,6 @@
 .feature-section{
     width: 80vw;
-    margin: 6rem auto;
+    margin: 12rem auto 6rem auto;
     cursor: pointer;
 }
 
@@ -48,4 +48,8 @@
     width: 22rem;
     background-color: #E6E6E6;
     color: #000;
+}
+
+body{
+    margin: 0 !important;
 }
