--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,4 @@
 <app-hero></app-hero>
 <app-feature-stories></app-feature-stories>
 <app-recent-stories></app-recent-stories>
+<app-footer></app-footer>
