--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,15 +1,14 @@
 <section class="header-section">
     <mat-toolbar color="primary">
-        <div class="navbar-groups">
-            <span>alireza</span>
-            <div class="navbar-items">
-                <span>Book REC</span>
-                <span>My Stories</span>
-                <span>About me</span>
-                <span>Blog</span>
-            </div>
-            <span>Sign up</span>
-        </div>
+        <ul class="navbar-groups">
+            <li><a routerLink="/">alireza</a></li>
+            <li class="navbar-items">
+                <a routerLink="/books">Book REC</a>
+                <a routerLink="/about">About Me</a>
+                <a routerLink="/blog">Blog</a>
+            </li>
+            <li><a>Sign up</a></li>
+        </ul>
     </mat-toolbar>
 </section>
 
