--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -5,7 +5,7 @@
                 <span class="hero-date">April, 3</span>
                 <h1 class="hero-title">How to Create a Startup? </h1>
                 <p class="hero-content">Looking at long-standing companies across various industries, we were able to identify several...</p>
-                <button mat-raised-button type="button" class="btn-primary">Read more</button>
+                <button mat-raised-button type="button" class="btn-primary" routerLink="/blog/1">Read more</button>
             </div>
         </div>
         <div class="hero-image">
