--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,1 @@
-<app-header></app-header>
-<app-hero></app-hero>
-<app-feature-stories></app-feature-stories>
-<app-recent-stories></app-recent-stories>
-<app-footer></app-footer>
+<router-outlet></router-outlet>
